# invenio-records-marc21

./: CHANGES.rst  README.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: conf.py
invenio_records_marc21/: __init__.py  cli.py  config.py  errors.py  ext.py  oai.py  proxies.py  tasks.py  utils.py  version.py  views.py
invenio_records_marc21/alembic/: 0058aec64e36_create_marc21_tables.py  4cb1c2e2bf42_change_datetime_types.py  56f3cf409798_create_files_versioning.py  5a09924b5110_update_templates_table.py  bcf247730972_add_record_metadata_versioning.py
invenio_records_marc21/data/: example-templates.json
invenio_records_marc21/fixtures/: __init__.py  demo.py  tasks.py  templates.py  utils.py
invenio_records_marc21/jsonschemas/records/: record-v1.0.0.json
invenio_records_marc21/mappings/v6/: __init__.py
invenio_records_marc21/records/: __init__.py  api.py  models.py
invenio_records_marc21/resources/: config.py  iiif.py  resources.py
invenio_records_marc21/services/: __init__.py  config.py  customizations.py  errors.py  facets.py  generators.py  links.py  permissions.py  services.py  tasks.py
invenio_records_marc21/services/pids/: tasks.py  (+1 more)
invenio_records_marc21/system/: __init__.py  apis.py  config.py  models.py  permissions.py  service.py
invenio_records_marc21/upgrade_scripts/: add_oaipid.py
tests/: conftest.py  test_invenio_records_cli.py  test_invenio_records_marc21.py
tests/records/: test_jsonschema.py
tests/services/: conftest.py  test-metadata.json  test_create_record.py  test_pids_service.py  test_pids_tasks.py  test_record_service.py
(+61 files in other folders)
