[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "BLE001",
  "D203", "D211", "D212", "D213", "D301",
  "E501",
  "FA100", "FA102",
  "FIX002",
  "INP001",
  "N999",
  "PERF203",
  "PLR0913",
  "RET504",
  "RUF012",
  "S101",
  "SLF001",
  "TC",
  "TD",
  "TID252",
  "UP009",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "ANN201",
  "D103",
  "S108", "S311",
]

[tool.mypy]
extra_checks = true
strict = true
strict_bytes = true
strict_equality = true
follow_untyped_imports = true
disallow_any_generics = false
python_executable = ".venv/bin/python"
