[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "BLE001",
  "D203", "D211", "D212", "D213", "D301", "D401", "D404",
  "E501",
  "FA100", "FA102",
  "FIX002",
  "INP001",
  "N999",
  "PERF203",
  "PLR0913",
  "RET504",
  "RUF012",
  "S101",
  "SIM114",
  "SLF001",
  "TC",
  "TD",
  "TID252",
  "UP009",
]


[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "ANN001", "ANN002", "ANN201", "ANN202",
  "ARG001",
  "D103", "D401",
  "N803",
  "S105", "S106", "S108", "S311",
]

[tool.mypy]
extra_checks = true
strict = true
strict_bytes = true
strict_equality = true
follow_untyped_imports = true
disallow_any_generics = false
python_executable = ".venv/bin/python"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
